--- a/lookup/templates/base.html
+++ b/lookup/templates/base.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Weather App</a>
+  <a class="navbar-brand" href="{% url 'home' %}">Weather App</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -23,9 +23,10 @@
         <a class="nav-link" href="{% url 'about' %}">About Me</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+    <form action="{% url 'home' %}" class="form-inline my-2 my-lg-0" method="POST" > 
+    	{% csrf_token %}
+      <input class="form-control mr-sm-2" type="search" placeholder="Enter Zip Code" aria-label="Search" name ="zipcode">
+      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Lookup</button>
     </form>
   </div>
 </nav>
