--- a/lookup/templates/home.html
+++ b/lookup/templates/home.html
@@ -26,6 +26,38 @@
 
 
 		{% endif %}
+
+	</br>
+	<form>
+	  <div class="form-group">
+	    <label for="exampleInputEmail1">Nome</label>
+	    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+	    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+	  </div>
+	  <div class="form-group">
+	    <label for="exampleInputPassword1">Endereco</label>
+	    <input type="password" class="form-control" id="exampleInputPassword1">
+	  </div>
+	  <div class="form-group form-check">
+	    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+	    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+	  </div>
+	</form>
+
+
+	<form action="{% url 'sobre' %}" method="POST"> 
+		{% csrf_token %}
+    	<div class="form-group">
+	      <input class="form-control" type="search" name ="nome_pessoa" id="nome_pessoa_id">
+	      <button class="btn btn-primary" type="submit">Lookup</button>
+	    </div>
+    </form> 
+
+	</br>
+	
+
+
+
 {% endif %}
 
 
